# MLOps_plant_project

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dataset.md  README.md  cloudbuild.yaml  data.dvc  main.py  pyproject.toml  report.html  requirements.txt  tasks.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: linting.yaml  tests.yaml
cloudbuild/: cloudbuild.api.yaml  cloudbuild.sweep.yaml  cloudbuild.yaml
configs/: default_config.yaml
configs/dataloader/: default.yaml
configs/experiments/: class.yaml  disease.yaml  plant.yaml
configs/model/: default.yaml
configs/sweeps/: simple.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth
outputs/2026-01-16/10-23-42/.hydra/: hydra.yaml
outputs/2026-01-16/11-34-45/.hydra/: hydra.yaml
outputs/2026-01-16/11-44-07/.hydra/: hydra.yaml
outputs/2026-01-16/12-03-08/.hydra/: hydra.yaml
outputs/2026-01-16/12-06-16/.hydra/: hydra.yaml
reports/: README.md  report.html  report.py
scripts/: create_demo_samples.py  get_data.sh  promote_best.py
src/plants/: api.py  data.py  evaluate.py  model.py  train.py  visualize.py
tests/: conftest.py  test_api.py  test_data.py  test_evaluate.py  test_model.py  test_script.py  test_train.py  test_visualize.py
tests/apitests/: test_api_unit.py
tests/integrationtests/: test_api.py  test_api_live.py
tests/performancetests/: locustfile.py
wandb/: latest-run
wandb/run-20260112_113630-oxyonh4v/: run-oxyonh4v.wandb
wandb/run-20260112_113630-oxyonh4v/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260112_124805-5elgwkk3/: run-5elgwkk3.wandb
wandb/run-20260112_124805-5elgwkk3/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20260112_125744-iddz1btr/: run-iddz1btr.wandb
wandb/run-20260112_125744-iddz1btr/files/: config.yaml  wandb-metadata.json  wandb-summary.json
(+8 files in other folders)
