[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "plants"
version = "0.0.1"
description = "MLOps project on plant image classification"
authors = [
  { name = "Group 90", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc-gs>=3.0.2",
    "pathspec<0.12",  # pin for DVC compatibility on macOS/py3.13
    "fastapi==0.115.6",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "omegaconf>=2.3.0",
    "scikit-learn>=1.8.0",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "typer==0.21.1",
    "uvicorn==0.34.0",
    "wandb>=0.23.1",
    "requests>=2.32.5",
    "opencv-python>=4.13.0.90",
    "pillow>=12.1.0",
    "python-multipart>=0.0.20",
    "httpx>=0.28.1",
    "locust>=2.43.1",
    "markdown>=3.10",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.4.6",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
    "kaggle>=1.8.3",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py311"

select = [
    "E",   # PEP8 errors
    "W",   # PEP8 warnings
    "F",   # Pyflakes
    "I",   # Import sorting
    "N",   # Naming conventions
    "B",   # Bugbear
    "UP",  # Modern Python
    "SIM", # Simplifications
    "C4",  # Comprehensions
    "ERA", # Remove unused code
]

ignore = []


[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
